--- a/kong.yml
+++ b/kong.yml
@@ -26,6 +26,11 @@ upstreams:
     targets:
       - target: store-service-1:3000
       - target: store-service-2:3000
+  - name: saga-orchestrator-upstream
+    algorithm: round-robin
+    targets:
+      - target: saga-orchestrator-1:3000
+      - target: saga-orchestrator-2:3000
 
 services:
   - name: auth
@@ -107,6 +112,30 @@ services:
       - name: sales-service
         paths:
           - /sales
+        strip_path: true
+        plugins:
+          - name: cors
+            config:
+              origins:
+                - "*"
+              methods:
+                - GET
+                - POST
+                - PUT
+                - DELETE
+              headers:
+                - Accept
+                - Authorization
+                - Content-Type
+              credentials: true
+
+  - name: saga-orchestrator
+    host: saga-orchestrator-upstream
+    port: 3000
+    routes:
+      - name: saga-orchestrator-service
+        paths:
+          - /saga
         strip_path: true
         plugins:
           - name: cors
