--- a/prometheus.yml
+++ b/prometheus.yml
@@ -27,3 +27,8 @@ scrape_configs:
     static_configs:
       - targets: ['store-service-1:3000', 'store-service-2:3000']
     metrics_path: /metrics
+
+  - job_name: 'saga-orchestrator'
+    static_configs:
+      - targets: ['saga-orchestrator-1:3000', 'saga-orchestrator-2:3000']
+    metrics_path: /metrics
