--- a/nginx.conf
+++ b/nginx.conf
@@ -5,14 +5,14 @@ http {
     listen 80;
 
     # Proxy les requêtes api-docs vers Kong
-    location ~ ^/(auth|inventory|products|sales|store)/api-docs {
+    location ~ ^/(auth|inventory|products|saga-orchestrator|sales|store)/api-docs {
       proxy_pass http://kong:8000;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
     }
 
     # Proxy les requêtes vers la doc API
-    location ~ ^/(auth|inventory|products|sales|store)(/|$) {
+    location ~ ^/(auth|inventory|products|saga-orchestrator|sales|store)(/|$) {
       proxy_pass http://kong:8000;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
